GPL/P6/tests/t020.err
Semantic error on line 3: Incorrect type (animation_block) for initial value of variable 's' of type (string).
