GPL/P6/tests/t020.gpl
forward animation move(circle c);

string s = move;
